Changes for 1.0.3.3

* fix bug 2779959	AA50: Stay in the Mobilization Zone

* fail when loading game where xml case and file name case differs (sgb)

* fix map name/unit case in nwo maps (sgb)

* mark territories with battles (sgb)

* Make it so map utility programs can find the centers, polygons, and map.properties files by using the
  path of the map's image file. (Stephen Wicklund)
  
* Make it so the user can specify the unit's scale when using the 'Auto Placement Finder' utility.(Stephen Wicklund)

* add a setting to "Lock" the map, so you can observe a game without the map moving all around (Stephen Wicklund)

* add  a setting to suppress the showing of battles between two AIs (Stephen Wicklund)

* add a setting to choose how long the AI pauses between each movement (Stephen Wicklund)

* add a better ai (Kevin Moore)

* limit number of units in one row of production panel to 8 (sgb)

*  The following list of bugs were fixed- primarily for AA50 (Comradekev)
	Fix the engine forcing the repair of at least 1 damage
	Amphib units taken as first casualties if partial retreat is possible
	Fix subs blocking naval bombardment
	Fix paratroop code (die with AA casualties, retreats, non-dependent in regular combat)
	Fix AARadar not inflicting casualties on aircraft
	Fix disappearing fighters on combined US/China turn
	Fix factories with IPC value <3 shouldn't get Increased Production bonus
	Fix warships allowed to battle subs/trns, then move in noncombat movement
	Fix error generation when placing IC, undoing it, then trying to re-place it
	Fix error generation when trying to place both new fighter and CV in sea zone
	Fix Null Pointer when trying to edit a sea zone owner
	Fix US being able to place an IC in a newly captured territory in AA50
	Fix NWO territories Romania, Czech., Normandy, and Le Harve.
	Multi-player transport fleets throw - 'wrong number of casualties selected' error
	Ask if BB/CR should bombard
	Add ability to ignore defending Trns
	Fix NWO map names