@@ -45,7 +45,6 @@ public class UnitAttachment extends DefaultAttachment
   private boolean m_isSea = false;
   private boolean m_isAA = false;
   private boolean m_isTank = false;  
-  private boolean m_isTransport = false;
   private boolean m_isFactory = false;
   private boolean m_canBlitz = false;
   private boolean m_isSub = false;
@@ -199,16 +198,6 @@ public class UnitAttachment extends DefaultAttachment
   public boolean isMechanized()
   {
     return m_isMechanized;
-  }
-
-  public void setIsTransport(String s)
-  {
-    m_isTransport = getBool(s);
-  }
-
-  public boolean isTransport()
-  {
-    return m_isTransport;
   }
 
   public void setIsFactory(String s)
