@@ -342,7 +342,7 @@ public class BattleTracker implements java.io.Serializable
 
             //If transports are restricted from controlling sea zones, subtract them
             if(!games.strategy.triplea.Properties.getTransportControlSeaZone(data))
-            	totalMatches -= Match.countMatches(arrivingUnits, Matches.UnitTypeIsTransport);
+            	totalMatches -= Match.countMatches(arrivingUnits, Matches.UnitIsTransport);
             
             //If subs are restricted from controlling sea zones, subtract them
             if(games.strategy.triplea.Properties.getSubControlSeaZoneRestricted(data))
