@@ -1,6 +1,8 @@
 Changes for 1.0.3.3
 
-* fix bug 2779959	AA50: Stay in the Mobilization Zone
+* fix bug 2753571 - Unloaded cargo not being removed when transport sinks (sgb,  gruetzdark)
+
+* fix bug 2779959 - AA50: Stay in the Mobilization Zone (sgb)
 
 * fail when loading game where xml case and file name case differs (sgb)
 
